--- a/task_project/template/collaborator-email-template.html
+++ b/task_project/template/collaborator-email-template.html
@@ -12,6 +12,8 @@
 
     <p>Visit the project to start collaborating. </p>
 
+    http://{{domain}}{% url 'taskapp:activate_collaborator' uidb64=uid token=token %}
+
 
     <p>Thank you,</p>
     <p>Your Team</p>
