--- a/task_project/template/dashboard-sidebar.html
+++ b/task_project/template/dashboard-sidebar.html
@@ -15,7 +15,7 @@
             </div>
             <div class="profile-name">
               <h5 class="mb-0 font-weight-normal">{{request.user}}</h5>
-              <span>Gold Member</span>
+              <span>{{ user.is_project_user }}</span>
             </div>
           </div>
           <a href="#" id="profile-dropdown" data-toggle="dropdown"><i class="mdi mdi-dots-vertical"></i></a>
@@ -68,14 +68,22 @@
       </li>
    
       <li class="nav-item menu-items">
-        <a class="nav-link" href="pages/forms/basic_elements.html">
+        <a class="nav-link" href="{% url 'taskapp:add_project' %}">
           <span class="menu-icon">
             <i class="mdi mdi-playlist-play"></i>
           </span>
           <span class="menu-title">Create New Project</span>
         </a>
       </li>
-     
+      
+      <li class="nav-item menu-items">
+        <a class="nav-link" href="#">
+          <span class="menu-icon">
+            <i class="mdi mdi-file-document-box"></i>
+          </span>
+          <span class="menu-title">Collaborations</span>
+        </a>
+      </li>
     </ul>
   </nav>
   <!-- partial -->
@@ -216,7 +224,7 @@
                 </div>
               </a>
               <div class="dropdown-divider"></div>
-              <a class="dropdown-item preview-item">
+              <a href="{% url 'taskapp:user_logout' %}" class="dropdown-item preview-item">
                 <div class="preview-thumbnail">
                   <div class="preview-icon bg-dark rounded-circle">
                     <i class="mdi mdi-logout text-danger"></i>
