--- a/task_project/template/dashboard-sidebar.html
+++ b/task_project/template/dashboard-sidebar.html
@@ -77,9 +77,9 @@
       </li>
       
       <li class="nav-item menu-items">
-        <a class="nav-link" href="#">
+        <a class="nav-link" href="{% url 'taskapp:collaboration_view' %}">
           <span class="menu-icon">
-            <i class="mdi mdi-file-document-box"></i>
+            <i class="mdi mdi-account-multiple"></i>
           </span>
           <span class="menu-title">Collaborations</span>
         </a>
