--- a/task_project/template/login.html
+++ b/task_project/template/login.html
@@ -58,7 +58,7 @@
                     <button class="btn btn-google col">
                       <i class="mdi mdi-google-plus"></i> Google plus </button>
                   </div>
-                  <p class="sign-up">Don't have an Account?<a href="{% url 'taskapp:register' %}"> Sign Up</a></p>
+                  <p class="sign-up">Don't have an Account?<a href="{% url 'account:register' %}"> Sign Up</a></p>
                 </form>
               </div>
             </div>
