--- a/task_project/template/collaboration-details.html
+++ b/task_project/template/collaboration-details.html
@@ -95,7 +95,7 @@
                     <div class="col-lg-12 grid-margin stretch-card">
                       <div class="card">
                         <div class="card-body">
-                          <h4 class="card-title">Collaborators</h4>
+                          <h4 class="card-title">Tasks Assigned</h4>
                           <div class="col-12 grid-margin stretch-card">
                             
                           </div>
@@ -112,18 +112,18 @@
                               </thead>
                               <tbody>
                                 {% for task in assigned_tasks %}
-                                <tr>
-                                  <td class="py-1">
-                                    <img src="{% static 'task/assets/images/faces-clipart/pic-1.png' %}" alt="image" />
-                                  </td>
-                                  
-                                  <td>{{task.assignees.first.email }}</td>
-                                  <td>
-                                    <label class="badge{% if task.status == 'PENDING' %} badge-danger {% elif task.status == 'ON IT' %} badge-warning {% elif task.status == 'COMPLETED' %} badge-success {% endif %}">{{ task.status }}</label>
-                                  </td>
-                                  <td>{{task.name}}</td>
-                                  <td>{{task.due_date|date:"M d, Y"}}</td>
-                                </tr>
+                                  <tr>
+                                    <td class="py-1">
+                                      <img src="{% static 'task/assets/images/faces-clipart/pic-1.png' %}" alt="image" />
+                                    </td>
+                                    
+                                    <td>{{request.user.email}}</td>
+                                    <td>
+                                      <label class="badge{% if task.status == 'PENDING' %} badge-danger {% elif task.status == 'ON IT' %} badge-warning {% elif task.status == 'COMPLETED' %} badge-success {% endif %}">{{ task.status }}</label>
+                                    </td>
+                                    <td>{{task.name}}</td>
+                                    <td>{{task.due_date|date:"M d, Y"}}</td>
+                                  </tr>
                                 {% endfor %}
 
                               </tbody>
@@ -135,9 +135,6 @@
                     </div>
 
                   </div>
-
-                  <button type="submit" class="btn btn-primary mr-2 mt-5">Edit Project</button>
-                  <button class="btn btn-danger mt-5">Delete Project</button>
 
                 </div>
                 {% endif %}
