--- a/task_project/template/index.html
+++ b/task_project/template/index.html
@@ -50,7 +50,7 @@
               <li class="nav-item"><a class="nav-link" aria-current="page" href="#superhero">Pricing</a></li>
               <li class="nav-item"><a class="nav-link" aria-current="page" href="#marketing">Resources</a></li>
             </ul>
-            <div class="d-flex ms-lg-4"><a class="btn btn-secondary-outline" href="#!">Sign In</a><a class="btn btn-warning ms-3" href="#!">Sign Up</a></div>
+            <div class="d-flex ms-lg-4"><a class="btn btn-secondary-outline" href="{% url 'account:user_login' %}">Sign In</a><a class="btn btn-warning ms-3" href="{% url 'account:register' %}">Sign Up</a></div>
           </div>
         </div>
       </nav>
